API Change : POST /images/(name)/tag no longer has a force query parameter.
